--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,8 @@ frontend:
         - echo "S3_BUCKET=$S3_BUCKET" >> .env.production
         - echo "S3_PUBLIC_BASE_URL=$S3_PUBLIC_BASE_URL" >> .env.production
         - echo "S3_SIGNED_URL_EXPIRES=$S3_SIGNED_URL_EXPIRES" >> .env.production
+        - echo "S3_ACCESS_KEY_ID=$S3_ACCESS_KEY_ID" >> .env.production
+        - echo "S3_SECRET_ACCESS_KEY=$S3_SECRET_ACCESS_KEY" >> .env.production
     build:
       commands:
         - npm run build
